Changes are done

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <body>
     <div class="word-search-container">
       <header><h1 class="title">Word search game</h1></header>
-      <section id="section"></section>
+      <section id="word-search"></section>
       <ul class="hints"></ul>
     </div>
     <script src="js/wordsearch.js"></script>
     <script src="js/game.js"></script>
-    <script id="game-over-message" type="text/html">
+    <div id="game-over-message">
       <div class='ws-game-over-inner' id='ws-game-over-inner'>
       <div class='ws-game-over' id='ws-game-over'>
       <h2>Congratulations!</h2>
       <p>You've found all of the words!</p>
       </div>
       </div>
-    </script>
+    </div>
   </body>
 </html>
