changes are done

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     </div>
     <script src="js/wordsearch.js"></script>
     <script src="js/game.js"></script>
-    <div id="game-over-message">
-      <div class='ws-game-over-inner' id='ws-game-over-inner'>
-      <div class='ws-game-over' id='ws-game-over'>
-      <h2>Congratulations!</h2>
-      <p>You've found all of the words!</p>
-      </div>
+    <div class="ws-game-over-outer hide" id="ws-game-over-outer">
+      <div id="game-over-message">
+        <div class='ws-game-over-inner' id='ws-game-over-inner'>
+          <div class='ws-game-over' id='ws-game-over'>
+            <h2>Congratulations!</h2>
+            <p>You've found all of the words!</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
